tests/baselines/reference/globalThisPropertyAssignment.errors.txt
globalThisPropertyAssignment.js(4,8): error TS2339: Property 'z' does not exist on type 'typeof globalThis & Window'.


==== globalThisPropertyAssignment.js (1 errors) ====
    this.x = 1
    var y = 2
    // should work in JS
    window.z = 3
           ~
!!! error TS2339: Property 'z' does not exist on type 'typeof globalThis & Window'.
    // should work in JS (even though it's a secondary declaration)
    globalThis.alpha = 4
    